tests/renderer/snapshots/tests__renderer__graphical__with_code.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error[E0308]: mismatched types
