tests/renderer/snapshots/tests__renderer__graphical__with_help_multiple.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: mismatched types
   help: did you check your syntax?
   help: it would really help if you did...
