tests/renderer/snapshots/tests__renderer__graphical__with_help_newlines.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: mismatched types
   help: expected type `Array<T>`
            found type `Boolean`
