tests/renderer/snapshots/tests__renderer__graphical__with_related_nested.snap
---
source: tests/renderer/graphical.rs
assertion_line: 88
expression: render(message)
---
× error: could not compile
      × error: failed to read file
            × error: permission denied
