tests/renderer/snapshots/tests__renderer__graphical__with_related_single.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: could not compile
      × error: failed to read file
