tests/renderer/snapshots/tests__renderer__graphical__with_severity_warning.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
⚠ warning: mismatched types
