tests/renderer/snapshots/tests__renderer__graphical__with_unnamed_source.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: mismatched types
   ╭───────────
 1 │ let a = 1;
 2 │ let b = 2;
   │     ^^^^^ labelled message
 3 │ let c = a + b;
   ╰──
